nova_tests/negative_capability/p50_positional_default_among_many.nv
// EXPECT_COMPILE_ERROR (D102)
//
// Plan 50 (D102 ревизия): позиционная привязка к дефолтному параметру
// среди нескольких. `connect` имеет 3 параметра, 2-й и 3-й — с дефолтом.
// `9000` ложится позиционно на `port` (дефолтный) → ошибка. `flag`
// опущен (дефолт). Позиционный аргумент идёт ДО любого именованного —
// поэтому срабатывает именно keyword-only, не «позиционный после
// именованного».

module negative_capability.p50_positional_default_among_many

fn connect(host str, port int = 8080, flag bool = false) -> int {
    ro f = if flag { 1 } else { 0 }
    host.len() + port + f
}

test "positional arg on defaulted param among many rejected" {
    ro _ = connect("localhost", 9000)
    assert(true)
}
